maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:-23: error: Unmatched closing brace '}' ignored here
	}
        ^JediEscaper:-22: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^JediEscaper:-18: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^JediEscaper:2: error: illegal start of statement (no modifiers allowed here)
override def run() {
^JediEscaper:69: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:70: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:71: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:72: error: Unmatched closing brace '}' ignored here
}
^